[package]
name = "dovero"
version = "0.1.0"
authors = ["Luciano Vernaschi <luciano@cromoteca.com>"]
edition = "2018"

[dependencies]
web-view = { version = "0.6.3", features = ["edge"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
kamadak-exif = "0.5.2"
base64 = "0.12.3"

[dependencies.rusqlite]
version = "0.24.0"
features = ["bundled"]

[[bin]]
name = "dovero"
path = "src/bin/gui.rs"
