[package]
name = "dovero"
version = "0.1.0"
authors = ["Luciano Vernaschi <luciano@cromoteca.com>"]
edition = "2018"

[dependencies]
web-view = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
kamadak-exif = "0.3.1"

[dependencies.rusqlite]
version = "0.16.0"
features = ["bundled"]

[[bin]]
name = "dovero"
path = "src/bin/gui.rs"
